01_pods.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ckad-ns1
  labels:
    what: ckad
---
apiVersion: v1
kind: Pod
metadata:
  namespace: ckad-ns1
  labels:
    app: pod-a
    what: ckad
  name: pod-a
spec:
  containers:
  - image: httpd
    name: httpd
---
apiVersion: v1
kind: Pod
metadata:
  namespace: ckad-ns1
  labels:
    app: pod-b
    what: ckad
  name: pod-b
spec:
  containers:
  - image: nginx
    name: nginx
  - image: rsyslog/syslog_appliance_alpine
    name: rsyslogd
