02_cm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ckad-ns2
  labels:
    what: ckad
---
apiVersion: v1
kind: Pod
metadata:
  namespace: ckad-ns2
  labels:
    app: alpine-pod
    what: ckad
  name: alpine-pod
spec:
  containers:
  - image: alpine
    name: alpine
    command:
    - /bin/sh
    - -c
    - env
