02_sidecar.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ckad-ns3
  labels:
    what: ckad
---
apiVersion: v1
kind: Pod
metadata:
  namespace: ckad-ns3
  labels:
    what: ckad
  name: sidecar-pod
spec:
  containers:
  - image: busybox
    name: busybox
    command:
    - /bin/sh
    - -c
    - "while true; do date >> /var/log/date.log; sleep 1; done"
    volumeMounts:
    - mountPath: /var/log
      name: log
  - image: busybox
    name: busybox2
    command:
    - /bin/sh
    - -c
    - "sleep 3600"
    volumeMounts:
    - mountPath: /var/log
      name: log
  volumes:
  - name: log
    emptyDir: {}
