04_probes.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: httpd
    what: ckad
  namespace: ckad-ns3
  name: httpd
spec:
  containers:
  - image: httpd
    name: httpd
    ports:
    -  containerPort: 80
    readinessProbe:
      httpGet:
        port: 80
        path: /
      initialDelaySeconds: 60
      periodSeconds: 10 # default
