08_volumes.yaml
kind: Pod
apiVersion: v1
metadata:
  name: 1312-pod
  namespace: ckad-1312
spec:
  volumes:
    - name: pvst
      persistentVolumeClaim:
        claimName: pv-claim
  containers:
    - name: pv-lab1312
      image: nginx
      volumeMounts:
        - mountPath: "/webdata"
          name: pvst
