adapter-pattern.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: app
    what: ckad
  name: app
spec:
  containers:
  - image: busybox
    name: app
    command:
    - "/bin/sh"
    args:
    - "-c"
    - "while true; do echo \"$(date) | $(du -sh ~)\" >> /var/logs/diskspace.txt; sleep 5; done;"
    volumeMounts:
    - name: logs
      mountPath: /var/logs
  - image: busybox
    name: transformer
    command:
    - "/bin/sh"
    args:
    - "-c"
    - "sleep 20; while true; do while read LINE; do echo \"$LINE\" | cut -f2 -d\"|\" >> $(date +%Y-%m-%d-%H-%M-%S)-transformed.txt; done < /var/logs/diskspace.txt; sleep 20; done;"
    volumeMounts:
    - name: logs
      mountPath: /var/logs
  volumes:
  - name: logs
    emptyDir: {}
