cm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-test-pod
  labels:
    what: ckad
spec:
  containers:
  - name: whatever
    image: alpine
    command: ["/bin/sh", "-c", "env"]
