init-container.yaml
kind: Pod
apiVersion: v1
metadata:
  name: init-cont
  labels:
    what: ckad
spec:
  containers:
    - name: web
      image: bmuschko/nodejs-read-config:1.0.0
      ports:
        - containerPort: 8080
      volumeMounts:
        - mountPath: /usr/shared/app
          name: app
  volumes:
    - name: app
      emptyDir: {}
