pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    what: ckad
    role: test
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: web # doesn't really matter
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP # this is not really needed as TCP is default
      resources:
        limits:
          memory: "128Mi"
          cpu: "250m"
