secretservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secretservice
    what: ckad
  name: secretservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secretservice
  template:
    metadata:
      labels:
        app: secretservice
        what: ckad
    spec:
      securityContext:
        runAsUser: 1000
      containers:
      - image: alpine
        name: alpine
        command: ["sleep"]
        args: ["3600"]
        volumeMounts:
        - mountPath: "/etc/users"
          name: credentials
          readOnly: true
      volumes:
      - name: credentials
        secret:
          secretName: credentials
