volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    what: ckad
    app: test-pod
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: test
          mountPath: /test1
      resources:
        limits:
          memory: "128Mi"
          cpu: "250m" 
    - name: sleeper
      image: alpine
      command: ["sleep"]
      args: ["3600"]
      volumeMounts:
        - name: test
          mountPath: /test2
      resources:
        limits:
          memory: "128Mi"
          cpu: "250m" 
  volumes:
    - name: test
      emptyDir: {}
