06_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-deployment
    what: ckad
  name: nginx-deployment
  namespace: ckad-ns6
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-deployment
    spec:
      containers:
      - image: nginx:1.8
        name: nginx
---
apiVersion: v1
kind: Service
metadata:
  namespace: ckad-ns6
  name: nginx-deployment
  labels:
    what: ckad
spec:
  selector:
    app: nginx-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
