nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-nginx
  labels:
    what: ckad
    app: test-nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: test-nginx
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
      - image: nginx:1.15
        name: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m" 
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-nginx
    what: ckad
  name: test-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test-nginx
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: test-nginx
    what: ckad
  name: test-nginx
spec:
  rules:
  - host: test-nginx.example.com
    http:
      paths:
      - backend:
          serviceName: test-nginx
          servicePort: 80
