07_nw-policy.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    what: ckad
    role: frontend
  name: web
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: web
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    what: ckad
    role: backend
  name: db
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: db
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    what: ckad
  name: allow-ingress-to-backend-from-frontend
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    what: ckad
  name: deny-all-egress-from-backend
spec:
  podSelector:
    matchLabels:
      role: backend
  policyTypes:
  - Egress
